[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "datastew"
module-root = ""

[project]
name = "datastew"
version = "0.1.0"
description = "Datastew is a python library for intelligent data harmonization using Large Language Model (LLM) vector embeddings."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.15"
authors = [
    { name = "Tim Adams", email = "tim.adams@scai.fraunhofer.de" },
    { name = "Mehmet Can Ay", email = "mehmet.ay@scai.fraunhofer.de" },
]
keywords = ["data-harmonization", "LLM", "embeddings", "data-steward"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "cachetools>=7.0.3",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "ollama>=0.6.1",
    "openai>=2.26.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pgvector>=0.4.2",
    "plotly>=6.6.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.3",
    "sqlalchemy>=2.0.48",
    "torch>=2.10.0",
]

[project.optional-dependencies]
dev = ["flake8>=7.3.0", "pytest>=9.0.2"]


[project.urls]
Homepage = "https://github.com/SCAI-BIO/datastew"
Repository = "https://github.com/SCAI-BIO/datastew"
Documentation = "https://github.com/SCAI-BIO/datastew#readme"
Tracker = "https://github.com/SCAI-BIO/datastew/issues"
